# Sean-Michael.dev

./: .gitignore  Dockerfile  Makefile  README.md  TODO.md  bio.html  bio_style.css  blog.html  blog_style.css  docker-compose.yaml  home_style.css  index.html  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yaml  code-scanning.yaml  deploy-latest.yaml  terraform.yaml  test-and-lint.yaml
app/: content.py  main.py
app/static/: style.css
app/templates/: 404.html  about.html  base.html  blog_detail.html  blog_index.html  digest_detail.html  digest_index.html  index.html  items.html  project_detail.html  projects_index.html
app/templates/partials/: item.html  sidebar_blogs.html
backend/: .gitignore  Dockerfile  package.json
content/blog/: k3s-gaming-pc.md  mt-hood-summit.md
frontend/: .dockerignore
infrastructure/: .gitignore  main.tf  outputs.tf  terraform.tf  variables.tf
infrastructure/scripts/: setup.sh
scripts/: blog.py  content.py  sync_content.py
tests/: test_main.py
