[project]
name = "sean-michael-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "jinja2>=3.1.6",
    "markdown>=3.10",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]
